Turn off testing since the new arm tests dont seem to want to compile on mingw. (Easy fix, but i'll have to get that merged to master)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,9 @@ add_subdirectory(video_core)
 add_subdirectory(audio_core)
 add_subdirectory(network)
 add_subdirectory(input_common)
-add_subdirectory(tests)
+if (BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
 if (ENABLE_SDL2)
     add_subdirectory(citra)
 endif()
